@@ -3,6 +3,9 @@
 
 #include "spvm_base.h"
 
+
+
+
 enum {
   SPVM_BASIC_TYPE_C_ID_UNKNOWN,
   SPVM_BASIC_TYPE_C_ID_UNDEF,
@@ -15,17 +18,17 @@ enum {
   SPVM_BASIC_TYPE_C_ID_DOUBLE,
   SPVM_BASIC_TYPE_C_ID_STRING,
   SPVM_BASIC_TYPE_C_ID_ANY_OBJECT,
+  SPVM_BASIC_TYPE_C_ID_OARRAY,
   SPVM_BASIC_TYPE_C_ID_BYTE_OBJECT,
   SPVM_BASIC_TYPE_C_ID_SHORT_OBJECT,
   SPVM_BASIC_TYPE_C_ID_INT_OBJECT,
   SPVM_BASIC_TYPE_C_ID_LONG_OBJECT,
   SPVM_BASIC_TYPE_C_ID_FLOAT_OBJECT,
   SPVM_BASIC_TYPE_C_ID_DOUBLE_OBJECT,
-  SPVM_BASIC_TYPE_C_ID_OARRAY,
 };
 
 enum {
-  SPVM_BASIC_TYPE_C_NUMERIC_OBJECT_UPGRADE_SHIFT = 8,
+  SPVM_BASIC_TYPE_C_NUMERIC_OBJECT_UPGRADE_SHIFT = 9,
 };
 
 extern const char* const SPVM_BASIC_TYPE_C_ID_NAMES[];
