@@ -810,30 +810,35 @@ int32_t SPVM_TYPE_is_object_array_type(SPVM_COMPILER* compiler, int32_t basic_ty
   (void)compiler;
   
   if (SPVM_TYPE_is_array_type(compiler, basic_type_id, dimension, flag)) {
-    int32_t element_dimension = dimension - 1;
-    if (SPVM_TYPE_is_ref_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 0;
-    }
-    else if (SPVM_TYPE_is_value_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 0;
-    }
-    else if (SPVM_TYPE_is_array_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 1;
-    }
-    else if (SPVM_TYPE_is_string_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 1;
-    }
-    else if (SPVM_TYPE_is_class_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 1;
-    }
-    else if (SPVM_TYPE_is_interface_type(compiler, basic_type_id, element_dimension, flag)) {
-      return 1;
-    }
-    else if (SPVM_TYPE_is_any_object_type(compiler, basic_type_id, element_dimension, flag)) {
+    if (SPVM_TYPE_is_oarray_type(compiler, basic_type_id, dimension, flag)) {
       return 1;
     }
     else {
-      return 0;
+      int32_t element_dimension = dimension - 1;
+      if (SPVM_TYPE_is_ref_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 0;
+      }
+      else if (SPVM_TYPE_is_value_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 0;
+      }
+      else if (SPVM_TYPE_is_array_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 1;
+      }
+      else if (SPVM_TYPE_is_string_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 1;
+      }
+      else if (SPVM_TYPE_is_class_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 1;
+      }
+      else if (SPVM_TYPE_is_interface_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 1;
+      }
+      else if (SPVM_TYPE_is_any_object_type(compiler, basic_type_id, element_dimension, flag)) {
+        return 1;
+      }
+      else {
+        return 0;
+      }
     }
   }
   else {
